<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.faray.leproducttest.ui.login.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_loginFragment_to_configFragment"
            app:destination="@id/configFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/configFragment"
        android:name="com.faray.leproducttest.ui.config.ConfigFragment"
        android:label="@string/title_config" />

    <fragment
        android:id="@+id/productionFragment"
        android:name="com.faray.leproducttest.ui.production.ProductionFragment"
        android:label="@string/title_production" />

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.faray.leproducttest.ui.result.ResultFragment"
        android:label="@string/title_result" />
</navigation>
